--- a/Aberrations/ABR-015/ABR015.html
+++ b/Aberrations/ABR-015/ABR015.html
@@ -111,7 +111,7 @@
                 <p><strong>Containment Division:</strong> Delta-1</p>
             </div>
             <div class="image-container">
-                <img src="https://github.com/Hazudo/ARI/blob/main/Aberrations/ABR-015/ABR-015.jpg" alt="Image of ABR-015">
+                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-015/ABR-015.jpg" alt="Image of ABR-015">
                 <p>Image of ABR-015 "The Reflective Abyss"</p>
             </div>
         </div>
