--- a/Aberrations/ABR-018/ABR018.html
+++ b/Aberrations/ABR-018/ABR018.html
@@ -108,8 +108,8 @@
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-018</p>
                 <p><strong>Special Title:</strong> Mirror of Malevolence</p>
-                <p><strong>Threat Level:</strong> 06 (High Threat)</p>
-                <p><strong>Containment Division:</strong> Gamma-2 (Unpredictable, Potential Danger)</p>
+                <p><strong>Threat Level:</strong> 06</p>
+                <p><strong>Containment Division:</strong> Gamma-2</p>
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-018/ABR-018.jpg" alt="Image of ABR-018">
