--- a/Aberrations/ABR-019/ABR019.html
+++ b/Aberrations/ABR-019/ABR019.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aberration Document - Aberration Research Institute</title>
+    <title>Aberration Document - ABR-019</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -23,7 +23,7 @@
             color: #f2f2f2;
             text-align: center;
             padding: 14px 20px;
-            text-decoration: none.
+            text-decoration: none;
         }
         .navbar a:hover {
             background-color: #464646;
@@ -36,6 +36,32 @@
             background-color: #4B4B4B;
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
+        }
+        .header-section {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+        .header-section div {
+            flex: 1;
+        }
+        .image-container {
+            max-width: 300px;
+            margin-left: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
+            background-color: #3D3D3D;
+            padding: 10px;
+            text-align: center;
+        }
+        .image-container img {
+            max-width: 100%;
+            border-radius: 8px;
+        }
+        .image-container p {
+            margin: 10px 0 0 0;
+            font-size: 14px;
+            color: #D3D3D3;
         }
         h1 {
             font-size: 22px;
@@ -53,42 +79,43 @@
         p, ul {
             font-size: 16px;
             line-height: 1.6;
-            color: #D3D3D3.
+            color: #D3D3D3;
         }
         ul {
-            list-style-type: none.
-            padding-left: 0.
+            list-style-type: none;
+            padding-left: 0;
         }
         li {
-            padding: 8px.
-            margin: 5px 0.
-        }
-        a {
-            color: #9c9c9c;
-            text-decoration: none.
-        }
-        a:hover {
-            color: #ffffff.
+            padding: 5px 0;
         }
     </style>
 </head>
 <body>
-    <div class="navbar">
-        <a href="homepage.html">Home</a>
-        <a href="ABRlist.html">Aberration Index</a>
-        <a href="clearanceranklist.html">Clearance Rank List</a>
-        <a href="stafftitles.html">Staff Titles</a>
-        <a href="about.html">About</a>
-        <a href="research.html">Research</a>
-        <a href="contact.html">Contact</a>
+     <div class="navbar">
+        <a href="https://hazudo.github.io/ARI/homepage.html">Home</a>
+        <a href="https://hazudo.github.io/ARI/ABRlist.html">Aberration Index</a>
+        <a href="https://hazudo.github.io/ARI/clearanceranklist.html">Clearance Rank List</a>
+        <a href="https://hazudo.github.io/ARI/containmentfacilities.html">Containment Facilities</a>
+        <a href="https://hazudo.github.io/ARI/stafftitles.html">Staff Titles</a>
+        <a href="https://hazudo.github.io/ARI/about.html">About</a>
+        <a href="https://hazudo.github.io/ARI/research.html">Research</a>
+        <a href="https://hazudo.github.io/ARI/contact.html">Contact</a>
     </div>
 
     <div class="container">
         <h1>ABERRATION DOCUMENT: ABR-019</h1>
-        <p><strong>Aberration Designation:</strong> ABR-019</p>
-        <p><strong>Special Title:</strong> Deathly Snapshot</p>
-        <p><strong>Threat Level:</strong> Class IV: Critical</p>
-        <p><strong>Containment Level:</strong> Delta-3</p>
+        <div class="header-section">
+            <div>
+                <p><strong>Aberration Designation:</strong> ABR-019</p>
+                <p><strong>Special Title:</strong> Deathly Snapshot</p>
+                <p><strong>Threat Level:</strong> 07</p>
+                <p><strong>Containment Division:</strong> Delta-3</p>
+            </div>
+            <div class="image-container">
+                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-019/ABR-019.jpg" alt="Image of ABR-019">
+                <p>ABR-019</p>
+            </div>
+        </div>
 
         <h2>Description</h2>
         <p>ABR-019, known as Deathly Snapshot, is a vintage Polaroid camera of unknown make and model. The camera exhibits no external markings or serial numbers, and its internal mechanisms do not correspond to any known manufacturing techniques. Despite its antiquated appearance, ABR-019 functions normally and produces instant photographs.</p>
@@ -108,14 +135,12 @@
         <h2>Appendices</h2>
         <p><strong>Addendum ABR-019-1: Incident Report ABR-019-01</strong></p>
         <p>On ██/██/20██, during routine testing, ABR-019 was used to photograph a standard containment cell. The resulting image showed the cell empty, with no signs of death. However, during subsequent tests in different locations, the photographs consistently depicted deaths of individuals at those locations, confirming ABR-019's ability to reveal death scenes.</p>
-        
+
         <p><strong>Addendum ABR-019-2: Experiment Log ABR-019-A</strong></p>
         <ul>
             <li><strong>Location:</strong> Containment Cell A-19</li>
             <li><strong>Procedure:</strong> ABR-019 used to photograph the cell.</li>
             <li><strong>Result:</strong> Photograph showed no signs of death. The cell has no recorded incidents of death within the past or future five-year range.</li>
-        </ul>
-        <ul>
             <li><strong>Location:</strong> Site-19 Cafeteria</li>
             <li><strong>Procedure:</strong> ABR-019 used to photograph the cafeteria.</li>
             <li><strong>Result:</strong> Photograph depicted an individual suffering from extensive third-degree burns. A week later, a fire broke out in the cafeteria due to an electrical fault, resulting in injuries and confirming the scene depicted in the photograph.</li>
@@ -125,7 +150,6 @@
         <p>ABR-019 has been utilized to enhance safety measures within high-risk containment cells. By taking images of these cells and observing any depicted deaths, ARI personnel have implemented additional safety protocols until photographs taken by ABR-019 no longer depict any deaths within the five-year range. This method has successfully reduced incidents and improved overall safety within these areas.</p>
 
         <p><strong>Conclusion:</strong> ABR-019 exhibits a consistent ability to reveal the moment of death at a given location within a five-year future range or any past event. The source of ABR-019's predictive capability remains unknown. Further study is required to understand the mechanism behind its anomalous properties and to explore potential uses or countermeasures.</p>
-
         <p><strong>Researcher's Note:</strong> The implications of ABR-019 are profound, suggesting a deterministic aspect of reality that defies conventional understanding. Ethical considerations must be paramount in all future experiments, given the inevitability of the outcomes depicted by ABR-019.</p>
 
         <h1>END OF DOCUMENT</h1>
