--- a/Aberrations/ABR-020/ABR020.html
+++ b/Aberrations/ABR-020/ABR020.html
@@ -37,6 +37,32 @@
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
+        .header-section {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+        .header-section div {
+            flex: 1;
+        }
+        .image-container {
+            max-width: 300px;
+            margin-left: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
+            background-color: #3D3D3D;
+            padding: 10px;
+            text-align: center;
+        }
+        .image-container img {
+            max-width: 100%;
+            border-radius: 8px;
+        }
+        .image-container p {
+            margin: 10px 0 0 0;
+            font-size: 14px;
+            color: #D3D3D3;
+        }
         h1 {
             font-size: 22px;
             border-bottom: 1px solid #666;
@@ -60,35 +86,36 @@
             padding-left: 0;
         }
         li {
-            padding: 8px;
-            margin: 5px 0;
-        }
-        a {
-            color: #9c9c9c;
-            text-decoration: none;
-        }
-        a:hover {
-            color: #ffffff;
+            padding: 5px 0;
         }
     </style>
 </head>
 <body>
     <div class="navbar">
-        <a href="homepage.html">Home</a>
-        <a href="ABRlist.html">Aberration Index</a>
-        <a href="clearanceranklist.html">Clearance Rank List</a>
-        <a href="stafftitles.html">Staff Titles</a>
-        <a href="about.html">About</a>
-        <a href="research.html">Research</a>
-        <a href="contact.html">Contact</a>
+        <a href="https://hazudo.github.io/ARI/homepage.html">Home</a>
+        <a href="https://hazudo.github.io/ARI/ABRlist.html">Aberration Index</a>
+        <a href="https://hazudo.github.io/ARI/clearanceranklist.html">Clearance Rank List</a>
+        <a href="https://hazudo.github.io/ARI/containmentfacilities.html">Containment Facilities</a>
+        <a href="https://hazudo.github.io/ARI/stafftitles.html">Staff Titles</a>
+        <a href="https://hazudo.github.io/ARI/about.html">About</a>
+        <a href="https://hazudo.github.io/ARI/research.html">Research</a>
+        <a href="https://hazudo.github.io/ARI/contact.html">Contact</a>
     </div>
 
     <div class="container">
         <h1>ABERRATION DOCUMENT: ABR-020</h1>
-        <p><strong>Aberration Designation:</strong> ABR-020</p>
-        <p><strong>Special Title:</strong> Memory Leech</p>
-        <p><strong>Threat Level:</strong> Class V: Apocalyptic</p>
-        <p><strong>Containment Level:</strong> Delta-3</p>
+        <div class="header-section">
+            <div>
+                <p><strong>Aberration Designation:</strong> ABR-020</p>
+                <p><strong>Special Title:</strong> Memory Leech</p>
+                <p><strong>Threat Level:</strong> 05</p>
+                <p><strong>Containment Division:</strong> Delta-1</p>
+            </div>
+            <div class="image-container">
+                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-020/ABR-020.jpg" alt="Image of ABR-020">
+                <p>First image of ABR-020</p>
+            </div>
+        </div>
 
         <h2>Description</h2>
         <p>ABR-020, known as Memory Leech, is a small, insect-like creature approximately 5 cm in length, with a segmented body and multiple legs adapted for gripping. Its appearance resembles a cross between a beetle and a leech. ABR-020 has the ability to latch onto the back of a victim's neck and erase all memories related to a specific person. The memory loss does not take effect until the victim has undergone a full sleep cycle. Once the memory loss occurs, the victim becomes incapable of recognizing or recalling anything about the targeted person, even if they are standing in front of them. Additionally, all memories of the incident and any interactions with ABR-020 are erased.</p>
@@ -104,32 +131,26 @@
         <p>ABR-020 does not exhibit active behavior or movement outside of its feeding. Its anomalous properties are triggered by human interaction, specifically its ability to latch onto a victim's neck and erase targeted memories. The variability in the effects on different individuals suggests a highly adaptive mechanism that can target specific memories with precision.</p>
         <p>The impact of memory erasure on subjects can lead to severe emotional distress, identity crises, depression, anxiety, and dissociation. Long-term effects often involve the development of PTSD-like symptoms, particularly in subjects who have lost memories of close family members or loved ones.</p>
 
-        <h2>Appendices</h2>
-        <p><strong>Addendum ABR-020-1: Incident Report ABR-020-01</strong></p>
-        <p>Date: ██/██/20██</p>
+        <h2>Additional Information</h2>
+        <h3>Addendum ABR-020-1: Incident Report ABR-020-01</h3>
+        <p><strong>Date:</strong> ██/██/20██</p>
         <p><strong>Incident:</strong> During routine cleaning of ABR-020’s enclosure, Dr. █████ accidentally breached the containment seal. ABR-020 escaped and latched onto the back of Dr. █████'s neck before containment protocols could be enacted. Security personnel were able to subdue and recontain ABR-020 after a brief struggle.</p>
         <p><strong>Outcome:</strong> Dr. █████ was immediately transported to the medical wing for examination. It was determined that Dr. █████ had been targeted for memory erasure. Following a full sleep cycle, Dr. █████ lost all memories related to his spouse, Dr. ████, who also works at Site-17. Despite extensive psychological counseling and attempts at memory retrieval, Dr. █████ was unable to recognize or recall any information about his spouse, resulting in severe emotional distress for both individuals. Dr. ████ has been placed on indefinite leave to cope with the situation.</p>
-        
-        <p><strong>Addendum ABR-020-2: Experiment Log ABR-020-A</strong></p>
-        <p>Date: ██/██/20██</p>
-        <ul>
-            <li><strong>Subject:</strong> D-1032</li>
-            <li><strong>Procedure:</strong> Subject D-1032 was exposed to ABR-020 under controlled conditions. ABR-020 was allowed to latch onto the back of the subject's neck. The target for memory erasure was the subject's sister, who had been the subject of prior interviews and psychological evaluations.</li>
-            <li><strong>Result:</strong> Upon detachment of ABR-020, subject D-1032 was observed and monitored for any immediate effects. The following day, after a full sleep cycle, D-1032 exhibited complete amnesia regarding the existence of their sister. Subsequent interactions with the sister were monitored. Despite her emotional appeals and presentation of photographic evidence, D-1032 displayed no recognition or emotional response. The sister's distress and the subject's confusion were recorded and analyzed. Subject D-1032 exhibited signs of severe depression and dissociation, necessitating psychiatric intervention.</li>
-        </ul>
-        <ul>
-            <li><strong>Subject:</strong> D-8745</li>
-            <li><strong>Procedure:</strong> During a routine test, D-8745 was exposed to ABR-020. The chosen memory target was D-8745's child. Following the procedure, D-8745 was returned to their cell, where the child was present for an observed reunion.</li>
-            <li><strong>Outcome:</strong> D-8745 interacted normally with the child for the remainder of the day. However, after a full sleep cycle, D-8745 awoke with no recollection of the child. When the child approached D-8745 with familiarity, D-8745 responded with confusion and a growing sense of unease, unable to understand the child's attachment. The child, distressed by the lack of recognition, became increasingly upset. D-8745, experiencing significant cognitive dissonance, requested to be removed from the situation. The incident resulted in emotional trauma for both the child and D-8745, prompting the immediate termination of the test and a re-evaluation of ethical protocols surrounding ABR-020's use.</li>
-        </ul>
 
-        <p><strong>Addendum ABR-020-3: Psychological Evaluation Summary</strong></p>
-        <p>Date: ██/██/20██</p>
+        <h3>Addendum ABR-020-2: Experiment Log ABR-020-A</h3>
+        <p><strong>Date:</strong> ██/██/20██</p>
+        <p><strong>Subject:</strong> D-1032</p>
+        <p><strong>Procedure:</strong> Subject D-1032 was exposed to ABR-020 under controlled conditions. ABR-020 was allowed to latch onto the back of the subject's neck. The target for memory erasure was the subject's sister, who had been the subject of prior interviews and psychological evaluations.</p>
+        <p><strong>Result:</strong> Upon detachment of ABR-020, subject D-1032 was observed and monitored for any immediate effects. The following day, after a full sleep cycle, D-1032 exhibited complete amnesia regarding the existence of their sister. Subsequent interactions with the sister were monitored. Despite her emotional appeals and presentation of photographic evidence, D-1032 displayed no recognition or emotional response. The sister's distress and the subject's confusion were recorded and analyzed. Subject D-1032 exhibited signs of severe depression and dissociation, necessitating psychiatric intervention.</p>
+
+        <p><strong>Subject:</strong> D-8745</p>
+        <p><strong>Procedure:</strong> During a routine test, D-8745 was exposed to ABR-020. The chosen memory target was D-8745's child. Following the procedure, D-8745 was returned to their cell, where the child was present for an observed reunion.</p>
+        <p><strong>Outcome:</strong> D-8745 interacted normally with the child for the remainder of the day. However, after a full sleep cycle, D-8745 awoke with no recollection of the child. When the child approached D-8745 with familiarity, D-8745 responded with confusion and a growing sense of unease, unable to understand the child's attachment. The child, distressed by the lack of recognition, became increasingly upset. D-8745, experiencing significant cognitive dissonance, requested to be removed from the situation. The incident resulted in emotional trauma for both the child and D-8745, prompting the immediate termination of the test and a re-evaluation of ethical protocols surrounding ABR-020's use.</p>
+
+        <h3>Addendum ABR-020-3: Psychological Evaluation Summary</h3>
+        <p><strong>Date:</strong> ██/██/20██</p>
         <p><strong>Summary:</strong> A comprehensive psychological evaluation was conducted on subjects exposed to ABR-020. Common symptoms include severe emotional distress, identity crises, depression, anxiety, and dissociation. Long-term effects often involve the development of PTSD-like symptoms, particularly in subjects who have lost memories of close family members or loved ones. Standard psychological support measures have proven insufficient in many cases, indicating the need for specialized therapeutic approaches.</p>
-
         <p><strong>Conclusion:</strong> ABR-020's ability to erase specific memories related to individuals poses a significant psychological threat, not only to the victims but also to those who were part of the erased memories. The emotional damage caused by ABR-020's effects is profound and often irreparable, necessitating strict containment and ethical considerations in its study and handling.</p>
-
-        <p><strong>Researcher's Note:</strong> The implications of ABR-020 are profound, suggesting a significant threat to the psychological well-being of affected individuals. Ethical considerations must be paramount in all future experiments, given the potential for severe and long-lasting emotional trauma.</p>
 
         <h1>END OF DOCUMENT</h1>
     </div>
